# Arvores_e_Grafos-Atividade_Semana_2

./: CMakeLists.txt
atividade_s2/: atividade_s2.c
atividade_s3/: bubbleSort.c  insertionSort.c  mergeSort.c  quickSort.c  selectionSort.c
atividade_s5/: tarefa.c
atividade_s8/: ex1.c  ex10  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex16.c  ex17.c  ex18.c  ex19.c  ex2.c  ex20  ex21.c  ex22.c  ex23.c  ex24.c  ex25.c  ex26.c  ex27.c  ex28.c  ex29  ex3.c  ex30  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
