cmake_minimum_required(VERSION 4.1)
project(atividade_semana2 C)

set(CMAKE_C_STANDARD 11)

add_executable(atividade_s2 atividade_s2/atividade_s2.c)

add_executable(s3_bubbleSort atividade_s3/bubbleSort.c)
add_executable(s3_insertionSort atividade_s3/insertionSort.c)
add_executable(s3_mergeSort atividade_s3/mergeSort.c)
add_executable(s3_quickSort atividade_s3/quickSort.c)
add_executable(s3_selectionSort atividade_s3/selectionSort.c)

add_executable(s4_maxHeap atividade_s4/max_heap.c)

add_executable(s5_atividade atividade_s5/tarefa.c)

add_executable(s8_ex1 atividade_s8/ex1.c)
add_executable(s8_ex2 atividade_s8/ex2.c)
add_executable(s8_ex3 atividade_s8/ex3.c)
add_executable(s8_ex4 atividade_s8/ex4.c)
add_executable(s8_ex5 atividade_s8/ex5.c)
add_executable(s8_ex6 atividade_s8/ex6.c)
add_executable(s8_ex7 atividade_s8/ex7.c)
add_executable(s8_ex8 atividade_s8/ex8.c)
add_executable(s8_ex9 atividade_s8/ex9.c)
add_executable(s8_ex11 atividade_s8/ex11.c)
add_executable(s8_ex12 atividade_s8/ex12.c)
add_executable(s8_ex13 atividade_s8/ex13.c)
add_executable(s8_ex14 atividade_s8/ex14.c)
add_executable(s8_ex15 atividade_s8/ex15.c)
add_executable(s8_ex16 atividade_s8/ex16.c)
add_executable(s8_ex17 atividade_s8/ex17.c)
add_executable(s8_ex18 atividade_s8/ex18.c)
add_executable(s8_ex19 atividade_s8/ex19.c)
add_executable(s8_ex21 atividade_s8/ex21.c)
add_executable(s8_ex22 atividade_s8/ex22.c)
add_executable(s8_ex23 atividade_s8/ex23.c)
add_executable(s8_ex24 atividade_s8/ex24.c)
add_executable(s8_ex25 atividade_s8/ex25.c)
add_executable(s8_ex26 atividade_s8/ex26.c)
add_executable(s8_ex27 atividade_s8/ex27.c)
add_executable(s8_ex28 atividade_s8/ex28.c)
